[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Menus/Mods/ModMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Menus/General/MenuFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.541176, 0.356863, 0.239216, 1 )

[node name="ModMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModInfo" type="RichTextLabel" parent="ModContainer"]
margin_right = 960.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
scroll_following = true

[node name="ModInput" type="LineEdit" parent="ModContainer"]
margin_top = 181.0
margin_right = 960.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Mod Command"

[node name="ModConfirm" type="Button" parent="ModContainer"]
margin_top = 362.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Confirm"
[connection signal="text_entered" from="ModContainer/ModInput" to="." method="_on_ModInput_text_entered"]
[connection signal="pressed" from="ModContainer/ModConfirm" to="." method="_on_ModConfirm_pressed"]
